--- a/README.me
+++ b/README.me
@@ -1,2 +1,2 @@
-A website focused on Doja Cat's highly anticipated fourth studio album, "Scarlet," annd her latest three singles: "Attention," "Paint the Town Red," and "Demons."
+A website focused on Doja Cat's highly anticipated fourth studio album, "Scarlet," and her latest three singles: "Attention," "Paint the Town Red," and "Demons."
 This was written as an assignment for CMP 464 @ CUNY Lehman.
